--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -1,7 +1,16 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+
+@font-face {
+    font-family: 'BtB';
+    src:
+        url(./fonts/Back_to_Black_Demo.ttf);
+}
+
+
 
 li{
     list-style: none;
@@ -9,4 +18,18 @@ li{
 
 a{
     text-decoration: none;
+}
+
+
+.btb{
+    font-family: 'BtB';
+}
+
+
+.btn{
+    background-color: #ff3150;
+    padding: 13px 41px;
+    border-radius: 24px;
+    color: #fff;
+    cursor: pointer;
 }
