--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,29 +1,13 @@
+@import './colors.scss';
 $header-color: #fff;
-@font-face {
-    font-family: 'BtB';
-    src:
-        url(./fonts/Back_to_Black_Demo.ttf);
-  }
 
-
-
-.btb{
-    font-family: 'BtB';
-}
-
-
-.btn{
-    background-color: #ff3150;
-    padding: 13px 41px;
-    border-radius: 24px;
-    color: $header-color;
-    cursor: pointer;
+.active-l{
+    color: $red;
 }
 
 header{
     background: url('./image/bg-header.png');
     background-size: cover;
-    font-family: 'Roboto', sans-serif;
     & .h-content{
         color: $header-color;
         margin: 0 20%;
@@ -36,9 +20,10 @@ header{
                 color: $header-color;
                 font-size: 2rem;
                 position: relative;
+                font-family: 'BtB';
                 &::before{
                     content: "Template";
-                    color:red;
+                    color:$red;
                     position: absolute;
                     font-family: 'Roboto', sans-serif;
                     font-size: 0.7rem;
@@ -62,14 +47,14 @@ header{
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 30% 0;
+            padding: 31.4% 0;
             & .title{
                 font-size: 5.5rem;
             }
             & p:nth-child(2){
                 color: #a8b9c0;
                 font-size: 1.65rem;
-                margin-top: 0.5%;
+                
             }
             & p:last-child{
                 margin-top: 7.5%;
