added block work

--- a/src/css/clients.scss
+++ b/src/css/clients.scss
@@ -16,7 +16,7 @@
             text-align: center;
         }
         & .clients-img{
-            margin-top: 11%;
+            padding: 11% 0 4% 0;
             display: flex;
             justify-content: space-around;
             align-items: center;
