added block adversite

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -52,7 +52,7 @@ header{
                 font-size: 5.5rem;
             }
             & p:nth-child(2){
-                color: #a8b9c0;
+                color: $text;
                 font-size: 1.65rem;
                 
             }
