--- a/src/css/work.scss
+++ b/src/css/work.scss
@@ -3,7 +3,7 @@
 .work{
     & .content{
         margin: 0 20%;
-        padding: 7.2% 0;
+        padding: 7.2% 0 11%;
         & .title{
             text-align: center;
             font-size: 2.7rem;
