added block blog

--- a/src/css/work.scss
+++ b/src/css/work.scss
@@ -20,7 +20,7 @@
                 position: absolute;
                 height: 2px;
                 width: 3.5%;
-                background-color: #ff3150;
+                background-color: $red;
                 bottom: -122%;
                 right: 47.5%;
             }
