--- a/src/css/blog.scss
+++ b/src/css/blog.scss
@@ -1,7 +1,7 @@
 @import './colors.scss';
 .blog{
     margin: 0 20%;
-    padding: 6.2% 0;
+    padding: 6.2% 0 9.4%;
     & .title{
         font-size: 2.7rem;
         text-transform: uppercase;
@@ -51,7 +51,7 @@
         }
     }
     &>div:last-child{
-        margin-top: 10%;
+        margin-top: 9%;
         text-transform: uppercase;
         text-align: center;
     }
