--- a/src/css/blog.scss
+++ b/src/css/blog.scss
@@ -1,7 +1,7 @@
 @import './colors.scss';
 .blog{
     margin: 0 20%;
-    padding: 6.2% 0 9.4%;
+    padding: 6.2% 0 8.7%;
     & .title{
         font-size: 2.7rem;
         text-transform: uppercase;
@@ -14,21 +14,12 @@
         margin-top: 1%;
         letter-spacing: -0.6px;
         position: relative;
-        &::before{
-            content: '';
-            position: absolute;
-            height: 2px;
-            width: 3.5%;
-            background-color: $red;
-            bottom: -122%;
-            right: 47.9%;
-        }
     }
     & .blogs{
         margin-top: 12.1%;
         display: flex;
         justify-content: space-between;
-        & article{
+        & .blog-article{
             flex-basis: 32.4%;
             & .bg-img{
                 & img{
@@ -37,7 +28,6 @@
                 }
             }
             & .date{
-                margin-top: 8%;
                 color: $text;
                 font-size: 0.8rem;
             }
@@ -51,8 +41,62 @@
         }
     }
     &>div:last-child{
-        margin-top: 9%;
         text-transform: uppercase;
-        text-align: center;
+        margin: 8% auto 0;
+    }
+}
+
+
+@media (min-width: 381px){
+    .blog{
+        & .title{
+            font-size: 2.7rem;
+        }
+    }
+}
+
+@media (min-width: 565px){
+    .blog{
+        &>p::before{
+            content: '';
+            position: absolute;
+            height: 2px;
+            width: 3.5%;
+            background-color: $red;
+            bottom: -122%;
+            right: 47.9%;
+        }
+    }
+}
+
+@media (min-width: 781px){
+    .blog{
+        & .blogs{
+            & .date{
+                margin-top: 8%;
+            }
+        }
+    }
+}
+
+@media (max-width: 780px){
+    .blog{
+        & .blogs{
+            flex-direction: column;
+            & .blog-article{
+                margin: 2% 0;
+                & .date{
+                    margin-top: 2%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 380px){
+    .blog{
+        & .title{
+            font-size: 2rem;
+        }
     }
 }
