--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -13,6 +13,9 @@
 }
 
 
+h2, h4, h5{
+    font-weight: normal;
+}
 
 li{
     list-style: none;
@@ -32,10 +35,41 @@ a{
 }
 
 .btn{
+    margin: 0 auto;
     background-color: $red;
+    text-align: center;
     padding: 13px 41px;
     border-radius: 24px;
     color: #fff;
     cursor: pointer;
     user-select: none;
+}
+
+
+@media(min-width:1901px){
+    .btn{
+        width: 11%;
+    }
+}
+@media(max-width:1900px){
+    .btn{
+        width: 20%;
+    }
+}
+
+@media(max-width:1060px){
+    .btn{
+        width: 50%;
+    }
+}
+@media(max-width:1060px){
+    .btn{
+        width: 50%;
+    }
+}
+
+@media(max-width:400px){
+    .btn{
+        width: 63%;
+    }
 }
