--- a/src/css/newslatter.scss
+++ b/src/css/newslatter.scss
@@ -4,35 +4,91 @@
     background-color: $red;
     & .content{
         margin: 0 20%;
-        padding: 1.6% 0;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        & .sub{
-            color: $dark-blue;
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        & .input{
-            flex-basis: 38%;
-            & input{
-                outline: none;
-                color: #fff;
-                border: 0;
-                font-size: 1rem;
-                background-color: transparent;
-                border-bottom: 1px solid #fff;
-                padding: 4px;
-                width: 99%;
-                &::placeholder{
+        padding: 1.6% 0 1%;
+        & form{
+            display: flex;
+            align-items: center;
+            & .sub{
+                color: $dark-blue;
+                font-weight: bold;
+            }
+            & .input{
+                flex-basis: 38%;
+                margin: 0 2%;
+                & input{
+                    outline: none;
                     color: #fff;
+                    border: 0;
+                    font-size: 1rem;
+                    background-color: transparent;
+                    border-bottom: 1px solid #fff;
+                    padding: 4px;
+                    width: 99%;
+                    &::placeholder{
+                        color: #fff;
+                    }
                 }
             }
+            & button{
+                background-color: $dark-blue;
+                color:#fff;
+                outline: none;
+                padding: 7% 35%;
+                border-radius: 17px;
+                border: 0;
+                font-size: 0.9rem;
+            }
         }
-        & .btn{
-            background-color: $dark-blue;
-            color:#fff;
-            padding: 6% 33%;
+    }
+}
+
+
+@media(min-width:781px){
+    .newslatter{
+        & .content{
+            & form{
+                flex-direction: row;
+                justify-content: space-around;
+            & .sub{
+                font-size: 1.2rem;
+                flex-basis: 24%;
+            }
+            } 
+        }
+    }  
+}
+
+
+@media(max-width:780px){
+    .newslatter{
+        .content{
+            & form{
+                flex-direction: column;
+                justify-content: center;
+                & .sub{
+                    font-size: 1rem;
+                    text-align: center;
+                }
+                & .input{
+                    margin: 10% 0;
+                }
+                & div:last-child{
+                   width: 33%;
+                    & button{
+                        padding: 5% 26%;
+                    }
+                } 
+            }
+        }
+    }
+}
+
+@media(max-width:500px){
+    .newslatter{
+        .content{
+            & button{
+                padding: 5% 17%;
+            }
         }
     }
 }
