--- a/src/css/work.scss
+++ b/src/css/work.scss
@@ -3,7 +3,7 @@
 .work{
     & .content{
         margin: 0 20%;
-        padding: 7.2% 0 11%;
+        padding: 7.2% 0 10.6%;
         & .title{
             text-align: center;
             font-size: 2.7rem;
@@ -27,12 +27,9 @@
         }
         & .work-img{
             margin-top: 11.2%;
-            justify-content: space-between;
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
             & div{
-                margin-top: 0.3%;
-                flex-basis: 24.8%;
+                margin: 0 0 -3px 0;
                 & img{
                     width: 100%;
                     height:100%;
@@ -41,3 +38,43 @@
         }
     }
 }
+
+
+@media (min-width: 1025px){
+    .work{
+        & .work-img{
+            grid-template-columns: repeat(4, 25%);
+            grid-gap: .2em;
+        }
+    }
+}
+
+
+@media (max-width: 1024px){
+    .work{
+        & .work-img{
+            grid-template-columns: repeat(2, 50%);
+            grid-gap: .2em;
+        }
+    }
+}
+
+@media (max-width: 532px){
+    .work{
+        & .content>p{
+            &::before{
+                display: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px){
+    .work{
+        & .work-img{
+            grid-template-columns: repeat(1, 100%);
+            grid-gap: .2em;
+        }
+    }
+}
+
