--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -48,13 +48,44 @@ header{
                 }
             }
             & .mobile-links{
+                position: relative;
                 & .burger{
+                    cursor: pointer;
+                    transition: all .5s ease-in-out;
                     & span{
                         display: block;
                         height: 3px;
                         background-color: #fff;
                         width: 27px;
                         margin-top: 4px;
+                    }
+                }
+                & .b-links{
+                    position: absolute;
+                    right: 0;
+                    top: 35px;
+                    padding: 0 5px;
+                    border-radius: 2px;
+                    background-color: #fff;
+                    display: none;
+                    &.open{
+                        display: block;
+                    }
+                    &::before{
+                        position: absolute;
+                        right: 0px;
+                        top: -21px;
+                        content: "";
+                        border-radius: 2px;
+                        border: 11px solid transparent;
+                        border-bottom-color: #fff;
+                    }
+                    & ul li{
+                        padding: 4px 30px;
+                        border-bottom: 1px solid rgb(236, 236, 236);
+                        & a{
+                            color: #000;
+                        }
                     }
                 }
             }
@@ -67,6 +98,53 @@ header{
             & p:nth-child(2){
                 color: $text;
                 font-size: 1.65rem;
+            }
+        }
+        & .modal-window{
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(#000,0.55);
+            transition: all .5s ease-in-out;
+            display: none;
+            &.open{
+                display: block;
+                
+            } 
+            & .modal-form{
+                background: #fff;
+                padding: 1% 2%;
+                width: 14%;
+                border-radius: 10px;
+                margin: 5% auto;
+                z-index: 1;
+                position: relative;
+                & form{
+                    color: #000;
+                    & p{
+                        margin: 3% 0 5%;
+                        & input{
+                            width: 99%;
+                            font-size: 0.9rem;
+                            outline: none;
+                            border: 0;
+                            border-bottom: 1px solid black;;
+                        }
+                    }
+                    & button{
+                        color: #fff;
+                        background-color: #ff3150;
+                        outline: none;
+                        display: block;
+                        margin: 0 auto;
+                        border: 0;
+                        border-radius: 15px;
+                        padding: 7px 25px;
+                        font-size: 0.97rem;
+                    }
+                }
             }
         }
     }
